fixed misaligned project items on 1200px break point

--- a/css/stylemain.css
+++ b/css/stylemain.css
@@ -171,9 +171,9 @@ body{
   .overview__projectItem#eighth{
   width: 438px; height: 245px; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 592.6, 1246.91, 0, 1); opacity: 1;}
   .overview__projectItem#ninth{
-    width: 438px; height: 245px; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 592.6, 1645.12, 0, 1); opacity: 1;}
+    width: 438px; height: 245px; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 52, 1645.12, 0, 1); opacity: 1;}
   .overview__projectItem#tenth{
-    width: 438px; height: 245px; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 52, 2041.8, 0, 1); opacity: 1;}
+    width: 438px; height: 245px; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 592.6, 1645.12, 0, 1); opacity: 1;}
 }
 @media only screen and (min-width:1305px){
   .overview__projectItem#first{
